pos-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pos
  annotations:
    configmanagement.gke.io/cluster-selector: selector-locationtype-usa-store
